--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ numpy == 1.18.4
 pandas == 1.0.4
 requests == 2.18.4
 scipy == 1.4.1
-tensorflow == 1.14.0
+tensorflow == 1.15.2
 tflearn == 0.3.2
+python == 3.7
